# app-lib3rd

./: .gitignore  CMakeLists.txt  README.md  app-lib3rd-include.cmake  app-lib3rd-include.pri  app-lib3rd.pro
lib3rd/: CMakeLists.txt  lib3rd-build.pri  lib3rd.pro
lib3rd/libasound/: CMakeLists.txt  libasound-include.pri  libasound.pro
lib3rd/libbreakpad/: CMakeLists.txt  libbreakpad-include.cmake  libbreakpad-include.pri  libbreakpad.pro
lib3rd/libcurl/: libcurl-include.pri  libcurl.pro
lib3rd/libdrm/: libdrm-include.pri  libdrm.pro
lib3rd/libffmpeg/: libffmpeg-include.pri  libffmpeg.pro
profile/: toolchain-linux-aarch64-rk3308.cmake  toolchain-linux-aarch64-rk3308.cmake.sh  toolchain-linux-aarch64-rk3308.sh  toolchain-linux-aarch64-rk3328.cmake  toolchain-linux-aarch64-rk3328.cmake.sh  toolchain-linux-aarch64-rk3328.sh  toolchain-linux-aarch64-rk3399.cmake.sh  toolchain-linux-aarch64-rk3399.sh  toolchain-linux-aarch64-rk3566.cmake  toolchain-linux-aarch64-rk3566.cmake.sh  toolchain-linux-aarch64-rk3566.sh  toolchain-linux-aarch64-rk3568.cmake  toolchain-linux-aarch64-rk3568.cmake.sh  toolchain-linux-aarch64-rk3568.sh  toolchain-linux-aarch64-rk3569.cmake  toolchain-linux-aarch64-rk3569.cmake.sh  toolchain-linux-aarch64-rk3569.sh  toolchain-linux-aarch64-rk3588.cmake  toolchain-linux-aarch64-rk3588.cmake.sh  toolchain-linux-aarch64-rk3588.sh  toolchain-linux-aarch64.cmake  toolchain-linux-aarch64.sh  toolchain-linux-arm-rk3288.cmake  toolchain-linux-arm-rk3288.cmake.sh  toolchain-linux-arm.cmake  toolchain-linux-arm.sh  toolchain-linux-x64.cmake
(+212 files in other folders)
